# todo_phase_ll

./: README.md
phase1_todo/: .gitignore  .vercelignore  README.md  demo.py  requirements-prod.txt  requirements.txt  test_acceptance_criteria.py  vercel.json
phase1_todo/api/: index.py
phase1_todo/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_migration.py
phase1_todo/backend/alembic/: env.py
phase1_todo/backend/alembic/versions/: 001_initial_schema.py  002_add_task_extended_fields.py
phase1_todo/backend/src/: main.py
phase1_todo/backend/src/api/: __init__.py  deps.py
phase1_todo/backend/src/api/routes/: __init__.py  auth.py  tasks.py
phase1_todo/backend/src/core/: __init__.py  config.py  security.py
phase1_todo/backend/src/models/: __init__.py  database.py  schemas.py  task.py  user.py
phase1_todo/frontend/: package-lock.json  package.json  tsconfig.json
phase1_todo/frontend/src/: proxy.ts
phase1_todo/specs/001-soft-delete-reason/: plan.md  spec.md
phase1_todo/specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1_todo/specs/002-priorities-tags/: spec.md
phase1_todo/specs/003-search-filter-sort/: spec.md
phase1_todo/specs/004-due-dates-reminders/: spec.md
phase1_todo/specs/005-recurring-tasks/: spec.md
phase1_todo/specs/006-todo-web-app/: data-model.md  phase1-feature-analysis.md  quickstart.md  research.md  spec-updated.md  spec.md.backup  tasks.md
phase1_todo/specs/agents/: planning.md  tasks.md  todo-agent.md  tools.md
(+63 files in other folders)
