[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Phase 2 Todo Web Application Backend"
authors = ["Evolution of Todo Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.21"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
psycopg = {version = "^3.2.0", extras = ["pool"]}
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
alembic = "^1.15.0"
httpx = "^0.28.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.40.0",
]
